--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,12 +1,20 @@
+a {
+  padding-left: 5px;
+}
+
 .App {
   text-align: center;
   position: relative;
   height: 100%;
   color: #eee;
+
+  display: flex;
+  flex-direction: column;
+  align-content: center;
 }
 
-.App-header {
-  padding: 10px;
+.header {
+  display: block;
 }
 
 .App-footer {
@@ -14,4 +22,11 @@
   position: fixed;
   width: 100%;
   bottom: 0;
+}
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
